test : 테스트 코드에서 List of 사용하도록 변경 (코드 리뷰)